# SECS

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
examples/: example.secs
secs/: Value.py  error.py  secs.py
secs/error/: EvalError.py  ParseError.py  error.py
secs/evaluator/: SECSContext.py  evaluator.py
secs/parser/: Expression.py  ExpressionDeclaration.py  Statement.py  parser.py
secs/scanner/: Scanner.py  Token.py  TokenType.py  scanner.py
src/secslang/: __init__.py  secs.py
src/secslang/error/: NoStatementError.py  error.py
src/secslang/evaluator/: SECSContext.py  evaluator.py
src/secslang/parser/: Expression.py  Statement.py  parser.py
src/secslang/scanner/: Token.py  TokenType.py  scanner.py
